dev.thihup.jvisualg.examples/src/main/resources/dev/thihup/jvisualg/examples/errors/notfound/function/func.alg
algoritmo "erro funcao nao existe"

inicio

    escreval(oi())

fimalgoritmo
